# GooFitRoot-Lifetime-2.1

./: README.md
examples/: CMakeLists.txt
examples/test3DBp-2016-G21/: CMakeLists.txt  testGoofit3DBp-2016.cu
include/goofit/PDFs/mypdf/: BernsteinPdf.h  EffiBernsteinPdf.h.21May  EffiBernsteinPdf.h.Jul10  EffiBernsteinPdf.h.jul3  EffiBernsteinPdf.h.tmp_adapt2  ErfcPolyPdf.h  ExpGausMPdf.h  ExpGausPEEfixSigmaPdf.h  ExpGausProdBPdf.h  ExpGausWithIntPdf.h  FastBernsteinPdf.h  Polynomial2Pdf.h  RGaussianPdf.h  SigmoidGausPdf.h  SimpleCheby2Pdf.h
include/goofit/PDFs/mypdf_tmp/: BivarGaussianConstrPdf.h  ErfEffiBpPdf.h  ErfcMassPdf.h  ExpGausPEEPdf.h  ExpGausPEESigmaBPdf.h  ExpGausProdBPdf.h  ExpGausProdEffiBPdf.h  PolyEffiPdf.h  SigmoidBpPdf.h  SimpleCheby2NPdf.h  (+1 more)
src/PDFs/: AllPdfs.cu  AllPdfs.cu.tmp  CMakeLists.txt  CMakeLists.txt.tmp
src/PDFs/basic/: PolynomialPdf.cu
src/PDFs/mypdf/: BernsteinPdf.cu  BernsteinPdf.cu.goodFactorial  BinomialEffiPdf.cu  BivarGaussianConstrPdf.cu  EffiBernsteinPdf.cu  EffiBernsteinPdf.cu.Jul10  EffiBernsteinPdf.cu.Jul3  EffiBernsteinPdf.cu.Jun15  EffiBernsteinPdf.cu.Jun20  EffiBernsteinPdf.cu.regression  EffiBernsteinPdf.cu.tmp_adapt  EffiBernsteinPdf.cu.tmp_adapt2  ErfEffiBpPdf.cu  ErfcMassPdf.cu  ErfcPolyPdf.cu  ExpGausMPdf.cu  ExpGausPEEPdf.cu  ExpGausPEESigmaBPdf.cu  ExpGausPEEfixSigmaPdf.cu  ExpGausProdBPdf.cu  ExpGausProdEffiBPdf.cu  ExpGausWithIntPdf.cu  FastBernsteinPdf.cu  PolyEffiPdf.cu  Polynomial2Pdf.cu  RGaussianPdf.cu  SigmoidBpPdf.cu  SigmoidGausPdf.cu  SimpleCheby2NPdf.cu  SimpleCheby2Pdf.cu  TrivarGaussianConstrPdf.cu
