if(ROOT_FOUND)
    add_subdirectory(2d_plot)
    add_subdirectory(addition)
    add_subdirectory(chisquare)
    add_subdirectory(convolution)
    add_subdirectory(dalitz)
    add_subdirectory(DP4)
    add_subdirectory(pipipi0DPFit)
    add_subdirectory(product)
    add_subdirectory(SigGen)
    add_subdirectory(simpleFit)
    add_subdirectory(TDDP4)
    add_subdirectory(zachFit)
    add_subdirectory(test3DBp-2016-G21)
    add_subdirectory(test3DB0-2016-G21)
    add_subdirectory(testEffiB0-2016)
    add_subdirectory(testGoofEffiB0-2016)
    add_subdirectory(testEffi3DB0-2016)
    add_subdirectory(testBernstein)
    add_subdirectory(testEffi3DB0Adapt-2016)
    add_subdirectory(testEffi3DB0AdaptGene-2016)
endif()

# Root not required
add_subdirectory(exponential)

goofit_add_link(RunAll.py)
